<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_radius_top"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/buttonClose"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_close"
            android:background="@color/trans"
            android:layout_gravity="end|top"
            android:foreground="?android:attr/actionBarItemBackground"/>

        <View
            android:layout_width="?attr/actionBarSize"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/bg_white_radius"
            android:backgroundTint="@color/gray"/>

    </FrameLayout>



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:src="@drawable/ic_network_error"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_joke"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_require"
        android:textAlignment="center"
        android:textColor="@color/color_main"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRetry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_main"
            android:background="@drawable/bg_border_blue_radius"
            android:text="@string/retry"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line_mid"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonViewSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:background="@drawable/bg_white_radius"
            android:backgroundTint="@color/color_main"
            android:text="@string/view_settings"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/line_mid"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="true"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/line_mid"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>


